# kokoro

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ]  demo.wasm  mir.mir  rustc-ice-2024-05-09T02_44_37-7148.txt  关于 Kokoro-core.md  关于发布-订阅模式.md
crates/kokoro/: Cargo.toml
crates/kokoro/examples/: get_component_imports.rs
crates/kokoro/src/: definitions.rs  lib.rs  manager.rs  plugin.rs
crates/kokoro/src/definitions/: later.rs  types.rs  utils.rs
crates/kokoro/src/manager/: common.rs  manager_trait.rs
crates/kokoro/src/plugin/: common.rs  common_config.rs  common_manager.rs  common_plugin.rs  manager.rs  manager_trait.rs  plugin_trait.rs
examples/: channel.rs  context.rs  demo.rs  demo_macro.rs  demo_tree.rs  dispose.rs  dynplugin.rs  dyplugin.rs  eventbus.rs  factory.rs  joke.rs  only-core.rs  plugin-plugin.rs  plugin.rs  pub-sub.rs  self_call.rs  stableany.rs  subscribe-closure.rs  subscribe-publish.rs  unplug-plugin.rs  unplugin-plugin.rs  unstable.rs  without-default.rs
examples/dynamic-plugin/: Cargo.toml
examples/dynamic-plugin/plugin-example/: Cargo.toml
examples/dynamic-plugin/plugin-example/src/: lib.rs
examples/dynamic-plugin/src/: main.rs
examples/dynplugin/: Cargo.toml
examples/dynplugin/src/: lib.rs
kokoro/: Cargo.toml
kokoro-core/: Cargo.toml  README.md
kokoro-core/src/: base_impl.rs  disposable.rs  event.rs  lib.rs  query.rs  schedule.rs  subscriber.rs
kokoro-core/src/context/: context.rs  mod.rs  scope.rs
kokoro-core/tests/: tests.rs
kokoro-default-impl/: Cargo.toml
kokoro-default-impl/src/: lib.rs  plugin.rs  service.rs  thread.rs
kokoro-dynamic-plugin/: Cargo.toml
kokoro-dynamic-plugin/src/: lib.rs
kokoro-flume-channel/: Cargo.toml
kokoro-flume-channel/src/: lib.rs
kokoro-impl-default/: Cargo.toml
kokoro-macros/: Cargo.toml
kokoro-macros/src/: lib.rs  util.rs
kokoro/examples/: dispose.rs  plugin-plugin.rs  plugin.rs  subscribe-closure.rs  subscribe-publish.rs
kokoro/src/: base_impl.rs  disposable.rs  event.rs  lib.rs  schedule.rs  subscriber.rs
kokoro/src/context/: context.rs  scope.rs
kokoro/src/default_implement/: base.rs  mod.rs  plugin.rs  thread.rs
kokoro/tests/: tests.rs
src/: any.rs  avail.rs  context.rs  lib.rs  plugin.rs
