[package]
name = "kokoro-neo"
version = "0.0.6"
edition = "2021"
repository = "https://github.com/Kokoro-rs/kokoro"
description = "Dynamic publish-subscribe pattern framework. Support for dynamic plug-ins and AOP"
keywords = [
    "publish-subscribe",
    "kokoro",
    "aop",
    "eventbus",
    "pubsub",
]
license = "Apache-2.0/MIT"

[features]

[dependencies]