[package]
name = "kokoro-neo"
version = "0.0.6"
edition = "2021"
repository = "https://github.com/Kokoro-rs/kokoro"
description = "Dynamic publish-subscribe pattern framework. Support for dynamic plug-ins and AOP"
keywords = ["publish-subscribe", "kokoro", "aop", "eventbus", "pubsub"]
license = "Apache-2.0/MIT"

[features]
default = []

[dependencies]
anyhow = "1.0.83"
dashmap = { version = "5.5.3", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.10.0"
