[package]
name = "kokoro-core"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Kokoro-rs/kokoro/tree/main/kokoro-core"
description = "Dynamic publish-subscribe pattern framework."
keywords = [
  "publish-subscribe",
  "pub/sub",
  "kokoro",
  "aop",
  "pattern",
  "framework",
  "fast",
  "eventbus",
  "pubsub",
]

[features]
nightly = []

[dependencies]
flume = "^0.11.0"
parking_lot = "^0.12.1"
rand = "^0.8.5"
rayon = "^1.8.1"

[dependencies.dashmap]
version = "^5.5.3"
features = ["rayon", "inline"]
