[package]
name = "kokoro-core"
version = "0.0.5"
edition = "2021"
repository = "https://github.com/Kokoro-rs/kokoro/tree/main/kokoro-core"
description = "Dynamic publish-subscribe pattern framework."
keywords = [
  "publish-subscribe",
  "kokoro",
  "aop",
  "eventbus",
  "pubsub",
]
license = "Apache-2.0/MIT"

[features]
nightly = []

[dependencies]
parking_lot = "^0.12.1"
rayon = "^1.8.1"

[dependencies.dashmap]
version = "^5.5.3"
features = ["rayon", "inline"]
