[package]
name = "kokoro-default-impl"
version = "0.0.2"
edition = "2021"
repository =  "https://github.com/Kokoro-rs/kokoro/tree/main/kokoro-default-impl"
description = "Kokoro's internal package, which implements some commonly used things"
keywords = [
  "publish-subscribe",
  "kokoro",
  "aop",
  "eventbus",
  "pubsub",
]
license = "Apache-2.0/MIT"


[dependencies]
parking_lot = "^0.12.1"
rand = "^0.8.5"

[dependencies.kokoro-core]
version = "^0.0.2"
path = "../kokoro-core"
