[package]
name = "kokoro-dynamic-plugin"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Kokoro-rs/kokoro/tree/main/kokoro-dynamic-plugin"
description = "Kokoro's internal package, which implements dynamic plug-in"
keywords = [
  "publish-subscribe",
  "pub/sub",
  "kokoro",
  "aop",
  "pattern",
  "framework",
  "fast",
  "eventbus",
  "pubsub",
]
license = "Apache-2.0/MIT"

[dependencies]
libloading = "^0.8.1"
[dependencies.kokoro-core]
path = "../kokoro-core"
version = "0.0.1"
[dependencies.kokoro-default-impl]
path = "../kokoro-default-impl"
version = "0.0.1"
