[package]
name = "kokoro-dynamic-plugin"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/Kokoro-rs/kokoro/tree/main/kokoro-dynamic-plugin"
description = "Kokoro's internal package, which implements dynamic plug-in"
keywords = [
  "publish-subscribe",
  "kokoro",
  "aop",
  "eventbus",
  "pubsub",
]
license = "Apache-2.0/MIT"

[dependencies]
libloading = "^0.8.1"
rand = "^0.8.5"
serde = "^1.0.196"
toml = "0.8.10"
[dependencies.kokoro-core]
path = "../kokoro-core"
version = "^0.0.3"
[dependencies.kokoro-default-impl]
path = "../kokoro-default-impl"
version = "^0.0.3"
