[package]
name = "kokoro-flume-channel"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "^0.11.0"
parking_lot = "^0.12.1"

[dependencies.kokoro-core]
path = "../kokoro-core"
version = "^0.0.3"
