[package]
name = "kokoro-flume-channel"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/kokoro-rs/kokoro/tree/main/kokoro-flume-channel"
description = "Kokoro's internal package, which implements dynamic plug-in"
keywords = [
  "publish-subscribe",
  "kokoro",
  "aop",
  "eventbus",
  "pubsub",
]
license = "Apache-2.0/MIT"

[dependencies]
flume = "^0.11.0"
parking_lot = "^0.12.1"

[dependencies.kokoro-core]
path = "../kokoro-core"
version = "^0.0.4"
