[package]
name = "kokoro-macros"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/Kokoro-rs/kokoro/tree/main/kokoro-macros"
description = "Kokoro's internal package, which are used for auto derives"
keywords = [
  "publish-subscribe",
  "kokoro",
  "aop",
  "eventbus",
  "pubsub",
]
license = "Apache-2.0/MIT"

[dependencies]
proc-macro2 = "^1.0.78"
quote = "^1.0.35"
syn = "^2.0.48"

[lib]
proc-macro = true
