[package]
name = "plugin-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.kokoro]
path = "../../../"

[lib]
crate-type = ["rlib","dylib"]
